Added basic mongodb logic

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb+srv://root:cyHNyiirX79fhYGR@cluster0.maqas.mongodb.net/Flowzy?retryWrites=true&w=majority",
+    "DatabaseName": "Flowzy"
+  },
   "AllowedHosts": "*"
 }
